# meetflow

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  meetflow.toml  pyproject.toml  start.bat
.github/workflows/: lint.yml
meetflow/: __init__.py  __main__.py  cli.py  config.py  daemon.py  journal.py  notify.py  text.py
meetflow/capture/: hotkey.py  loopback.py  mic.py  recorder.py  tray.py
meetflow/extract/: llm.py  prompts.py  schema.py
meetflow/integrations/: calendar.py  crm.py
meetflow/storage/: audio.py  database.py  files.py  quarantine.py
meetflow/transcribe/: diarize.py  engine.py  filters.py
swift-sidecar/: MeetFlowCapture-Info.plist  Package.swift  build.sh  build_err.txt  grant-perm.sh  verify-tap.sh
swift-sidecar/Sources/meetflow-capture/: MicCapture.swift  Permission.swift  ProcessTap.swift  Route.swift  main.swift
tests/: test_calendar.py  test_collapse.py  test_config.py  test_daemon.py  test_engine_prompt.py  test_extract.py  test_fixups.py  test_quarantine.py  test_storage.py  test_text.py  test_transcribe.py
tests/fixtures/: journal_loops.json
