[project]
name = "meetflow"
version = "0.1.0"
description = "Personal meeting intelligence — record, transcribe, extract, integrate."
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "anthropic>=0.40.0",
    "portalocker>=2.8.0",
    "pydantic>=2.5.0",
    # Windows-only system-audio loopback; macOS uses a CoreAudio process-tap instead.
    "PyAudioWPatch>=0.2.12; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
meetflow = "meetflow.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
